--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,5 @@
 @import "_nullstyle.scss";
+@import "_variables.scss";
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans&family=Varela+Round&display=swap');
 @font-face {
   font-family: 'Varela Round', sans-serif;
