--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,12 +1,14 @@
 footer{
-  background: #3a3a3a;
+  background: $bark-white;
   padding-bottom: 79px;
+  //copyright text
   .copyright{
     font-family: 'Montserrat', sans-serif;
     font-size: 18px;
     line-height: 1.2;
     font-weight: 600;
-    color: #666666;
+    color: $gray;
+    //padding top and left
     @include ptl(94px,5.4%);
     letter-spacing: 0.08px;
   }
@@ -28,34 +30,37 @@ footer{
           width: 311px;
           height: 50px;
           font-weight: 500;
-          background-color: #f4f4f4;
-          border: 1px solid #a3a3a3;
+          background-color: $bark-white;
+          border: 1px solid $gray-light;
           border-radius: 5px;
           padding: 18px 20px 18px 17px;
           letter-spacing: 0.35px;
         }
+        //validation for email
         input[type=email]:invalid:not(:focus):not(:placeholder-shown){
           box-shadow: inset 0 0 13px 0 rgba(228,106,106,0.74);
         }
+        //focus effect for email
         input[type=email]:focus{
-          box-shadow: inset 0 0 1px 1px #3393FF;
+          box-shadow: inset 0 0 1px 1px $blue;
         }
         .email{
           padding-top: 9px;
           padding-bottom: 3px;
         }
+        //styles for buttons
         button{
           margin-left: 8px;
           width: 100px;
           height: 48px;
-          background-color: #f06464;
+          background-color: $red;
           border-radius: 5px;
-          color: white;
+          color: $white;
           span{
             font-size: 16px;
             line-height: 24px;
             font-weight: 400;
-            color: #f4f4f4;
+            color: $bark-white;
           }
         }
       }
