--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -6,3 +6,7 @@ $bark-white: #f4f4f4;
 $blue: #3393FF;
 $black: #151515;
 $gray-light: #aeaeae;
+$light-black: #313131;
+$brown: #262626;
+$gray64 :#3a3a3a;
+$gray15: #262626;
