--- a/scss/_banner.scss
+++ b/scss/_banner.scss
@@ -1,3 +1,4 @@
+@import "_variables.scss";
 .banner{
   margin-top: 98px;
   position: relative;
@@ -5,14 +6,14 @@
   &__list{
     // styles for slider
     .cta-block {
-      background: #de5d5d url('../img/iphone.png') 230px 0 no-repeat;
+      background: $red url('../img/iphone.png') 230px 0 no-repeat;
       width: 100%;
       height: 689px;
       // title
       h2 {
         font-family: 'Montserrat', sans-serif;
         @include ptl(16.58%, 1.2%);
-        color: #ffffff;
+        color: $white;
         font-size: 90px;
         font-weight: 600;
         font-style: normal;
@@ -78,12 +79,12 @@
       width: 12px;
       height: 12px;
       background-color: rgba(255,255,255,0.0);
-      border: 3px solid #ffffff;
+      border: 3px solid $white;
       border-radius: 50%;
       margin: 0 3px;
       cursor: pointer;
       &--active {
-        background-color: white;
+        background-color: $white;
       }
     }
   }
