--- a/scss/_share.scss
+++ b/scss/_share.scss
@@ -1,5 +1,7 @@
+@import "_variables.scss";
+@import "_mixin.scss";
 .share{
-  background-color: #262626;
+  background-color: $brown;
   .container-custom{
     //share photo
     .share-img{
